Fixed drop down toggle in Views

--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="~/Content/css/select2.min.css">
     <!-- Date Picker CSS -->
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
+    <!-- Full Calender CSS -->
+    <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
