--- a/SchoolDiarySystem/Views/Comment/Details.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Details.cshtml
@@ -19,12 +19,13 @@
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Comment Details</h3>
+                        <h3>Comment</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
                     <div class="item-content">
                         <div class="header-inline item-header">
+                            <h3 class="text-dark-medium font-medium">Details</h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
@@ -32,16 +33,16 @@
                                 </ul>
                             </div>
                         </div>
-                        <p>@Html.Label(Model.Comment.ToString(), new { @class = "font-medium text-dark-medium" })</p>
+                        <p>@Html.Label("Comment", Model.Comment.ToString(), new { @class = "font-medium text-dark-medium" })</p>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
                                 <tbody>
                                     <tr>
                                         <td>Date:</td>
-                                        <td>@Html.Label(Model.CommentDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>@Html.Label(Model.CommentDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>Time:</td>
+                                        <td>Class Time:</td>
                                         <td>@Html.Label(Model.Time.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
@@ -80,27 +81,4 @@
     </div>
 </div>
 
-@section Scripts {
-    <!-- jquery-->
-    <script src="~/Content/js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="~/Content/js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="~/Content/js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
-    <!-- Scroll Up Js -->
-    <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
-    <!-- Custom Js -->
-    <script src="~/Content/js/main.js"></script>
-}
+@section Scripts {}
