--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="~/Content/css/select2.min.css">
     <!-- Date Picker CSS -->
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
+    <!-- Full Calender CSS -->
+    <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -162,11 +164,15 @@
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
-    <script src="~/Content/js/select2.min.js"></script>
+    <script src="js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="js/datepicker.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
+    <!-- Modernize js -->
+    <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
 
     @RenderSection("scripts", required: false)
 
