--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="~/Content/css/select2.min.css">
     <!-- Date Picker CSS -->
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
+    <!-- Full Calender CSS -->
+    <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -152,6 +154,7 @@
         </div>
         <!-- Page Area End Here -->
     </div>
+
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
     <!-- Plugins js -->
@@ -160,10 +163,26 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Counterup Js -->
+    <script src="~/Content/js/jquery.counterup.min.js"></script>
+    <!-- Moment Js -->
+    <script src="~/Content/js/moment.min.js"></script>
+    <!-- Waypoints Js -->
+    <script src="~/Content/js/jquery.waypoints.min.js"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
+    <!-- Full Calender Js -->
+    <script src="~/Content/js/fullcalendar.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="js/datepicker.min.js"></script>
+    <!-- Chart Js -->
+    <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
+    <!-- Modernize js -->
+    <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
 
     @RenderSection("scripts", required: false)
 
