--- a/SchoolDiarySystem/Views/Topic/Details.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Details.cshtml
@@ -39,10 +39,10 @@
                                 <tbody>
                                     <tr>
                                         <td>Date:</td>
-                                        <td>@Html.Label(Model.TopicDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>@Html.Label(Model.TopicDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>Time:</td>
+                                        <td>Class Time:</td>
                                         <td>@Html.Label(Model.Time.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
@@ -89,27 +89,4 @@
     </div>
 </div>
 
-@section Scripts {
-    <!-- jquery-->
-    <script src="~/Content/js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="~/Content/js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="~/Content/js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
-    <!-- Scroll Up Js -->
-    <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
-    <!-- Custom Js -->
-    <script src="~/Content/js/main.js"></script>
-}
+@section Scripts {}
