--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -83,51 +83,4 @@
     </div>
 </div>
 
-@section Scripts {
-    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/favicon.png">
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="~/Content/css/normalize.css">
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="~/Content/css/main.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="~/Content/css/all.min.css">
-    <!-- Flaticon CSS -->
-    <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="~/Content/css/animate.min.css">
-    <!-- Select 2 CSS -->
-    <link rel="stylesheet" href="~/Content/css/select2.min.css">
-    <!-- Date Picker CSS -->
-    <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="~/Content/style.css">
-    <!-- Modernize js -->
-    <script src="js/modernizr-3.6.0.min.js"></script>
-
-    <!-- jquery-->
-    <script src="~/Content/js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="~/Content/js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="~/Content/js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
-    <!-- Scroll Up Js -->
-    <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Select 2 Js -->
-    <script src="~/Content/js/select2.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
-    <!-- Custom Js -->
-    <script src="~/Content/js/main.js"></script>
-}
+@section Scripts {}
